fix gap link footer

--- a/syle.css
+++ b/syle.css
@@ -224,3 +224,9 @@ a{
     background-color:rgba(201, 208, 214, 0.5);
     padding: 36px 0px;
 }
+.link-footer{
+    display: flex;
+    gap: 24px;
+
+
+}
